--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,111 @@
-/* селектор елементу найчастіше застосовується для 
-оформлення всіх тегів одного типу на сторінці,
-наприклад,
-якщо у всіх посиланнях у документі потрібно 
-прибрати підкреслення.*/
-
+/* ====== RESET STYLES ====== */
+ul, ol {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+button {cursor: pointer;}
 body {
     font-family: "Roboto", sans-serif;
-    font-size: 24px;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+
+/* ====== TITLE STYLES */
+.section-title {
+    font-size: 36px;
+    line-height: 1.1;
+}
+.sub-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+/* ====== HEADER STYLES ====== */
+.logo {
     font-weight: 700;
-    
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+.logo-accent {
+    color: #4D5AE5;
+}
+.menu-item {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.menu-item:hover, 
+.menu-item:focus {
+    color: #404BBF;
+}
+.address-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.address-link:hover,
+.address-link:focus {
+    color: #404BBF;
+}
+
+/* ====== HERO SECTION STYLES ====== */
+.hero-section {
+    background-color: #2E2F42;
+}
+.hero-title {
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+.hero-button {
+    background: #4D5AE5;
+    color: #ffffff;
+}
+.hero-button:focus,
+.hero-button:hover {
+    background-color: #404BBF;
+}
+/* ====== BENEFITS SECTION STYLES ====== */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1ps;
+    border: 0:
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset (100%);
+    clip: rect (0 0 0 0);
+    overflow: hidden;
+}
+
+/* ======= OUR TEAM SECTION STYLES ====== */
+
+
+/* ====== OUR PORTFOLIO SETION STYLES ====== */
+
+
+/* ====== FOOTER SECTION ====== */
+
+.footer-section {
+    background-color: #2E2F42;
+}
+.logo-footer{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+.footer-text {
+    color: #ffffff;
 }
