--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,14 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    color: #2e2f42;
 }
 .sub-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 /* ====== HEADER STYLES ====== */
 .logo {
@@ -46,6 +48,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 .menu-item:hover, 
 .menu-item:focus {
@@ -61,7 +64,7 @@ body {
 }
 .address-link:hover,
 .address-link:focus {
-    color: #434455;
+    color: #404bbf;
 }
 
 /* ====== HERO SECTION STYLES ====== */
@@ -132,4 +135,5 @@ body {
 }
 .footer-text {
     color: #f4f4fd;
+    line-height: 1.5;
 }
