modify css file

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,18 +90,7 @@ body {
     background-color: #404bbf;
 }
 /* ====== BENEFITS SECTION STYLES ====== */
-/* .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1ps;
-    border: 0:
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset (100%);
-    clip: rect (0 0 0 0);
-    overflow: hidden;
-} */
+
 .text {
     line-height: 1.5;
 }
@@ -131,7 +120,7 @@ body {
     color: #4d5ae5;
 }
 .logo-span-footer {
-    color: f4f4fd;
+    color: #f4f4fd;
 }
 .footer-text {
     color: #f4f4fd;
