--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,8 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.menu-item:hover, 
-.menu-item:focus {
+.menu-link:hover, 
+.menu-link:focus {
     color: #404bbf;
 }
 .address {
