--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
 /* ====== RESET STYLES ====== */
+h1, h2, h3, h4, h5, h6, p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+image {
+    display: block;
+}
 ul, ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
     list-style-type: none;
 }
 a {
@@ -8,10 +18,19 @@ a {
 }
 button {cursor: pointer;}
 body {
+    margin-top: 30px;
     font-family: "Roboto", sans-serif;
     letter-spacing: 0.02em;
     color: #434455;
     background-color: #ffffff;
+}
+
+.container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* ====== TITLE STYLES */
@@ -31,6 +50,7 @@ body {
     color: #2e2f42;
 }
 /* ====== HEADER STYLES ====== */
+
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -39,23 +59,36 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
 }
 .logo-accent {
     color: #2e2f42;
 }
-.menu-item {
+.header-container {
+    display: flex;
+    justify-content: space-between;
+}
+.nav-list {
+    display: inline-flex;
+    gap: 40px;
+}
+.nav-item {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.menu-link:hover, 
-.menu-link:focus {
+.nav-link:hover, 
+.nav-link:focus {
     color: #404bbf;
 }
 .address {
     font-style: normal;
+}
+.address-list {
+    display: flex;
+    gap: 40px;
 }
 .address-link {
     font-size: 16px;
@@ -68,15 +101,25 @@ body {
 }
 
 /* ====== HERO SECTION STYLES ====== */
+
 .hero-section {
+    padding-top: 188px;
+    padding-bottom: 188px;
     background-color: #2e2f42;
 }
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .hero-title {
+    max-width: 496px;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #ffffff;
     text-align: center;
+    margin-bottom: 48px;
 }
 .hero-button {
     background: #4d5ae5;
@@ -84,13 +127,35 @@ body {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    padding: 16px 32px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: 0;
 }
 .hero-button:focus,
 .hero-button:hover {
     background-color: #404bbf;
 }
 /* ====== BENEFITS SECTION STYLES ====== */
-
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1ps;
+    border: 0: padding: 0;
+    white-space: nowrap;
+    clip-path: inset (100%);
+    clip: rect (0 0 0 0);
+    overflow: hidden;
+}
+.benefits-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.benefits-list {
+    display: flex;
+    gap: 24px;
+}
 .text {
     line-height: 1.5;
 }
@@ -99,12 +164,30 @@ body {
 .team-section {
     background-color: #F4F4FD;
 }
+.team-title {
+    padding-top: 120px;
+    padding-bottom: 72px;
+}
+.team-list {
+    display: flex;
+    gap: 24px;
+    margin-bottom: 120px;
+}
 .team-item {
     background-color: #FFFFFF;
 }
+
 /* ====== OUR PORTFOLIO SETION STYLES ====== */
-
-
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+    margin-bottom: 110px;
+}
+.portfolio-title {
+    padding-top: 120px;
+    margin-bottom: 72px;
+}
 /* ====== FOOTER SECTION ====== */
 
 .footer-section {
@@ -125,4 +208,11 @@ body {
 .footer-text {
     color: #f4f4fd;
     line-height: 1.5;
+    display: block;
+    width: 264px;
+    padding-top: 16px;
+}
+.footer-container {
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
