--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;   
+}
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border-bottom: 1px solid #e7e9fc;
 }
 .header-nav {
@@ -117,7 +122,7 @@ body {
     padding-bottom: 188px;
     background-color: #2e2f42;
 }
-.header {
+.hero-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -206,11 +211,14 @@ body {
     text-align: center;
 }
 /* ====== OUR PORTFOLIO SETION STYLES ====== */
+.portfolio-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 48px 24px;
-    margin-bottom: 110px;
 }
 .portfolio-card {
     padding: 32px 16px;
@@ -221,6 +229,8 @@ body {
 
 .footer-section {
     background-color: #2e2f42;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 .logo-footer{
     display: inline-block;
@@ -241,8 +251,4 @@ body {
     line-height: 1.5;
     display: block;
     width: 264px;
-}
-.footer-container {
-    padding-top: 100px;
-    padding-bottom: 100px;
 }
