--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,8 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding: 24px 0;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .nav-link:hover, 
 .nav-link:focus {
